# anyerr

./: Cargo.toml  README.md  flake.nix
.github/workflows/: test.yml
examples/: echo-server.rs  structured-context.rs
pkgs/rsudoku/: default.nix
src/: context.rs  converter.rs  core.rs  kind.rs  lib.rs  overlay.rs  report.rs
src/context/: iter.rs  map.rs  singleton.rs  unit.rs
src/context/map/: any.rs  facade.rs
src/context/singleton/: facade.rs
src/core/: data.rs
src/domain/board/model/: position.rs  region.rs
src/overlay/: error.rs  result.rs
src/report/: inner.rs
src/rsudoku-domain/: Cargo.toml
src/rsudoku-domain/board/model/: mod.rs  region.rs
src/rsudoku-util/: Cargo.toml
src/rsudoku-util/error/: base.rs  context.rs  converter.rs  core.rs  data.rs  error.rs  kind.rs  mod.rs
src/rsudoku-util/error/context/: iter.rs  map.rs  singleton.rs  string_map.rs  unit.rs
src/rsudoku-util/error/context/map/: any.rs  facade.rs
src/rsudoku-util/error/core/: data.rs
src/rsudoku-util/error/error/: data.rs
src/rsudoku-util/error/overlay/: error.rs  result.rs
